[project]
name = "jaclang"
version = "0.6.0"
description = "Jaclang is a unique and powerful programming language that runs on top of Python, offering an unprecedented level of intelligence and intuitive understanding."
authors = [{name = "Jason Mars", email = "jason@jaseci.org"}]
license = {text = "MIT"}
keywords = ["jaclang", "programming-language", "machine-learning", "artificial-intelligence"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
requires-python = ">=3.12"

[project.readme]
text = """
<div align="center">
  <picture>
    <source media="(prefers-color-scheme: dark)" srcset="https://www.jac-lang.org//assets/logo.png">
    <source media="(prefers-color-scheme: light)" srcset="https://www.jac-lang.org//assets/logo.png">
    <img alt="Jaclang Programming Language: Unique and Powerful programming language that runs on top of Python"
         src="https://www.jac-lang.org//assets/logo.png"
         width="20%">
  </picture>

[Website][Jaclang] | [Getting started] | [Learn] | [Documentation] | [Contributing]

  [![PyPI version](https://img.shields.io/pypi/v/jaclang.svg)](https://pypi.org/project/jaclang/) [![Tests](https://github.com/chandralegend/jaclang/actions/workflows/run_pytest.yml/badge.svg?branch=main)](https://github.com/chandralegend/jaclang/actions/workflows/run_pytest.yml) [![codecov](https://codecov.io/github/chandralegend/jaclang/graph/badge.svg?token=OAX26B0FE4)](https://codecov.io/github/chandralegend/jaclang)
</div>

This is the main source code repository for [Jaclang]. It contains the compiler,
standard library, and documentation.



[Jaclang]: https://www.jac-lang.org/
[Getting Started]: https://www.jac-lang.org//start/
[Learn]: https://www.jac-lang.org//learn
[Documentation]: https://www.jac-lang.org//learn/guide/
[Contributing]: .github/CONTRIBUTING.md

## Why Jaclang?

- **Performance:** Fast and memory-efficient, suitable for critical services, embedded devices, and easily integrate with other languages.

- **Reliability:** Our rich type system and ownership model ensure memory and thread safety, reducing bugs at compile-time.

- **Productivity:** editor support ([jac-analyzer]).

[jac-analyzer]: https://github.com/Jaseci-Labs/jac-analyzer

## Quick Start

Read ["Installation"] from [The Book].

["Installation"]: https://doc.rust-lang.org/book/ch01-01-installation.html
[The Book]: https://doc.rust-lang.org/book/index.html

## Installing from Source

If you really want to install from source (though this is not recommended), see
[INSTALL.md](INSTALL.md).

## Getting Help

See https://www.jaclang-lang.org/community for a list of chat platforms and forums.

## Contributing

See [CONTRIBUTING.md](.github/CONTRIBUTING.md).

## License

Jaclang is primarily distributed under the terms of both the MIT license and the
Apache License (Version 2.0), with portions covered by various BSD-like
licenses.

See [LICENSE-MIT](.guthub/LICENSE), and
[COPYRIGHT](COPYRIGHT) for details.

## Trademark

[Jaseci][jaseci] owns and protects the Jaclang
trademarks and logos (the "Jaclang Trademarks").

If you want to use these names or brands, please read the
[media guide][media-guide].

Third-party logos may be subject to third-party copyrights and trademarks. See
[Licenses][policies-licenses] for details.

[jaseci]: https://jaseci.org/
[media-guide]: https://foundation.rust-lang.org/policies/logo-policy-and-media-guide/
[policies-licenses]: https://www.rust-lang.org/policies/licenses"""
content-type = "text/markdown"

[project.urls]
Repository = "https://github.com/Jaseci-Labs/jaclang"
Homepage = "https://jac-lang.org"
Documentation = "https://jac-lang.org/learn"

[project.entry-points.console_script]
jac = "jaclang.cli.cli:start_cli"

[tool.setuptools]
packages = ['jaclang',
 'jaclang.core',
 'jaclang.plugin',
 'jaclang.utils',
 'jaclang.cli',
 'jaclang.compiler',
 'jaclang.vendor',
 'jaclang.core.llms',
 'jaclang.plugin.tests',
 'jaclang.utils.tests',
 'jaclang.compiler.passes',
 'jaclang.compiler.tests',
 'jaclang.compiler.passes.utils',
 'jaclang.compiler.passes.main',
 'jaclang.compiler.passes.tool',
 'jaclang.compiler.passes.main.tests',
 'jaclang.compiler.passes.tool.tests',
 'jaclang.compiler.tests.fixtures',
 'jaclang.vendor.mypyc',
 'jaclang.vendor.lark',
 'jaclang.vendor.mypy',
 'jaclang.vendor.pluggy',
 'jaclang.vendor.mypyc.irbuild',
 'jaclang.vendor.mypyc.analysis',
 'jaclang.vendor.mypyc.test',
 'jaclang.vendor.mypyc.ir',
 'jaclang.vendor.mypyc.codegen',
 'jaclang.vendor.mypyc.primitives',
 'jaclang.vendor.mypyc.transform',
 'jaclang.vendor.lark.parsers',
 'jaclang.vendor.lark.tools',
 'jaclang.vendor.lark.__pyinstaller',
 'jaclang.vendor.lark.grammars',
 'jaclang.vendor.mypy.dmypy',
 'jaclang.vendor.mypy.test',
 'jaclang.vendor.mypy.plugins',
 'jaclang.vendor.mypy.server',
 'jaclang.vendor.mypy.test.meta']
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.lark", "*.ini"]

[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"